  fixed a few things since 1.0.1
* User classes extending Dwoo_Template_File are now supporter better with
  regard to includes - Thanks to the Kayako.com team for the patch
* Objects now act like arrays when you access non-existing properties on 
  them (i.e. it outputs a notice only if it's output straight, and none
  when passed to a function)
* Fixed a bug with parsing AND/OR keywords in conditionals when they were
  followed by round brackets
* Fixed assignments not handling multi-line values correctly
* Fixed parameter parsing issue when a plugin name was all uppercased
* Fixed assignments failing with autoEscape enabled
* Fixed parsing of vars with string keys that was too greedy
* Fixed parsing of comments that were on top of the file when there are 
  spaces at the end of it
* Dwoo_Template::$chmod is now enforced for directories as well (#18)
* Many new unit tests to improve code coverage and a bunch of bug fixes 
  that resulted, but I didn't really keep track of them

[2008-12-24] 1.0.1
* Direct assignments like {$foo = 5} now allow spaces around the operator
* Fixed a {foreach} bug with the implode argument
* Fixed modulo operator in if statements
* Fixed date_format handling of negative and small unix timestamps
* Fixed a weird reference bug with ZF and includes.. whatever but thanks
  to Denis Arh for the patch

[2008-10-23] 1.0.0
! BC Break: Small one that probably won't affect anyone, but it makes the
  PluginProxy feature much stronger. Basically if you used a custom one you
  will get a fatal error and need to update it to conform to the new
  IPluginProxy interface, that's it
+ Compiler: the modifier syntax (|foo) can now be applied on functions and on
  complex variables i.e. {$obj->getStuff()|upper} or {lower('foo')|upper}
+ SmartyCompat: Added a {section} plugin but I strongly discourage using it,
  it was really made to support legacy templates, since {for} doesn't have to