@@ -24,6 +24,8 @@
 * Objects now act like arrays when you access non-existing properties on 
   them (i.e. it outputs a notice only if it's output straight, and none
   when passed to a function)
+* For can now iterate backwards if you input numbers, it won't work with 
+  variables though
 * Fixed a bug with parsing AND/OR keywords in conditionals when they were
   followed by round brackets
 * Fixed assignments not handling multi-line values correctly
